# sinnet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.devcontainer/: Dockerfile  devcontainer.json
examples/: main.cpp
include/sinnet/connection/: Connection.hpp  ConnectionHandler.hpp  TCPConnection.hpp  UDPConnection.hpp
include/sinnet/eventloop/: EventLoop.hpp  EventLoopHandler.hpp
src/: EventLoop.cpp
src/connection/: Connection.cpp  TCPConnection.cpp  UDPConnection.cpp
tests/: ConnectionTests.cpp  EventLoopTests.cpp
